k3s/container-registry/service.yml
apiVersion: v1
kind: Service
metadata:
  name: container-registry
  namespace: container-registry
spec:
  selector:
    app: container-registry
  ports:
  - port: 5000
    targetPort: 5000
