k3s/container-registry/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: container-registry
  namespace: container-registry
  labels:
    name: container-registry
spec:
  rules:
  - host: registry.cluster.int.darkarctic.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: container-registry
            port: 
              number: 5000
